testsuite/tests/typecheck/should_compile/ValidHoleFits.hs
module ValidHoleFits where


data Moo = Moo Integer
