testsuite/tests/typecheck/should_fail/T8570b.hs
module T8570b where

data Field = Image
